# system_monitor

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh
css/: style.css
src/: AmdInfo.cpp  CpuUsage.cpp  FileSystem.cpp  GpuInfo.cpp  MemInfo.cpp  NetInfo.cpp  NvidiaInfo.cpp  SystemMonitorWindow.cpp  main.cpp
src/include/: AmdInfo.hpp  CpuUsage.hpp  FileSystem.hpp  GpuInfo.hpp  MemInfo.hpp  NetInfo.hpp  NvidiaInfo.hpp  SystemMonitorWindow.hpp
